--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
   body {
-    background-color: fuchsia;
+    background-color:white;
     text-align: center;
   }
 
@@ -10,17 +10,41 @@
   }
 
   label, button{
-    font-size: 30px;
+    font-size: 20px;
     color: black;
   }
 
   input, button{
     font-size: 20px;
     text-align: center;
-    border-radius: 100px;
+    border-radius: 20px;
     border: 2px solid black;
+    padding: 10px;
+    width: 90%;
   }
 
   input:hover {
     font-size: 30px;
   }
+
+  div {
+    background-color: rgb(0, 225, 255);
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: black;   
+    padding: 10px;
+  }
+
+  hr{
+    width: 90%;
+  }
+
+  #botoes{
+    width: 40%;
+  }
+
+  
